--- a/index.html
+++ b/index.html
@@ -1,6 +1,93 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
-  <head><title>Test</title></head>
-  <body><h1>Hello World</h1></body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Your Invitation</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 200vh; /* allow scroll */
+      background: #f5f2e7;
+      font-family: 'Arial', sans-serif;
+    }
+
+    .envelope-container {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 300px;
+      height: 200px;
+      perspective: 1000px;
+      z-index: 2;
+    }
+
+    .envelope {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      background: #e0a96d;
+      border: 2px solid #c47f3a;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+      overflow: hidden;
+    }
+
+    .flap {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 50%;
+      background: #d98c43;
+      transform-origin: top center;
+      transition: transform 1s ease;
+      z-index: 3;
+    }
+
+    .open .flap {
+      transform: rotateX(-180deg);
+    }
+
+    .message {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0;
+      transition: opacity 1s ease 0.8s;
+      text-align: center;
+      padding: 20px;
+      background: white;
+      border-radius: 8px;
+      z-index: 1;
+    }
+
+    .open .message {
+      opacity: 1;
+    }
+
+  </style>
+</head>
+<body>
+
+  <div class="envelope-container">
+    <div class="envelope" id="envelope">
+      <div class="flap"></div>
+      <div class="message">
+        <h2>You're Invited!</h2>
+        <p>Come celebrate with us on Saturday! 🎉</p>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    window.addEventListener('scroll', () => {
+      const envelope = document.getElementById('envelope');
+      envelope.classList.add('open');
+    });
+  </script>
+
+</body>
 </html>
